manager user, product, branch

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 # jwt
 secret.key=12wqasxz
 time.expire=7200000L
+
+#faillogincount
+fail.login.count=5
