--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 # port
-spring.application.name=wFlowerService
+spring.application.name=wProductService
 server.port=3333
 
 #db config
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://172.17.0.2:3306/FLOWER?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://172.17.0.2:3306/PRODUCT?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=12wqasxz
 
