--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=3333
 
 #db config
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/PRODUCT?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://mysql2:3306/PRODUCT?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=12wqasxz
 
@@ -14,7 +14,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 #url
-#server.servlet.contextPath=/api
 
 # jwt
 secret.key=12wqasxz
@@ -25,6 +24,3 @@ fail.login.count=5
 
 # debug mode
 isDebug=true
-
-# src image
-srcImg=home/bkhoa0401/Documents/Product/
